syntax = "proto3";

option csharp_namespace = "AElf.Contracts.Genesis";

import "common.proto";

message ContractInfo
{
    int32 Category = 1;
    Address Owner = 2;
    Hash ContractHash = 3;
}